--- a/.gitignore
+++ b/.gitignore
@@ -212,3 +212,9 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+.idea/.gitignore
+.idea/inspectionProfiles/
+.idea/misc.xml
+.idea/modules.xml
+.idea/personal_website.iml
+.idea/vcs.xml
